--- a/my-project/index.html
+++ b/my-project/index.html
@@ -91,7 +91,9 @@
     <section>
       <h2 class="font-parisienne text-center text-5xl">Foods</h2>
       <span id="foods">
-        <div class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48">
+        <div
+          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-96"
+        >
           <div
             class="bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
@@ -150,7 +152,9 @@
           </div>
         </div>
 
-        <div class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48">
+        <div
+          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-124"
+        >
           <div
             class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96"
           >
@@ -161,8 +165,13 @@
                 alt=""
               />
             </div>
-            <p class="text-center text-sm font-cormorant_garamond">
-              Soupe à l'oignon or French Onion Soup is
+            <p class="text-center text-sm font-cormorant_garamond w-72">
+              Beef bourguignon, also known as beef Burgundy and buf à la
+              Bourguignonne, is a French beef stew made with carrots, onions,
+              garlic, and a bouquet garni, and topped with pearl onions,
+              mushrooms, and bacon. Piece de boeuf à la bourguignonne is a
+              similar recipe that uses a piece of braised beef with the same
+              garnish.
             </p>
           </div>
 
@@ -176,8 +185,13 @@
                 alt=""
               />
             </div>
-            <p class="text-center text-sm font-cormorant_garamond">
-              Soupe à l'oignon or French Onion Soup is
+            <p class="text-center text-sm font-cormorant_garamond w-72">
+              A soufflé is a baked egg-based delicacy that dates from the early
+              eighteenth century in France. It can be served as a savory main
+              meal or sweetened as a dessert when combined with other
+              ingredients. The French verb souffler means "to blow," "to
+              breathe," "to inflate," or "to puff," and the word soufflé is the
+              past participle of that verb.
             </p>
           </div>
           <div
@@ -190,8 +204,13 @@
                 alt=""
               />
             </div>
-            <p class="text-center text-sm font-cormorant_garamond">
-              Soupe à l'oignon or French Onion Soup is
+            <p class="text-center text-sm font-cormorant_garamond w-72">
+              Flamiche is a typical French pie made with chopped leeks, a little
+              butter, and either milk or crème fraîche. Picardy's version of the
+              famed Lorraine quiche, the dish has its origins in the French area
+              of Picardy. The earliest recipe was discovered in a French
+              soldier's diary in the late 18th century. Flamiche is now
+              available in a variety of flavors.
             </p>
           </div>
         </div>
@@ -206,8 +225,11 @@
                 alt=""
               />
             </div>
-            <p class="text-center text-sm font-cormorant_garamond">
-              Soupe à l'oignon or French Onion Soup is
+            <p class="text-center text-sm font-cormorant_garamond w-72">
+              Duck confit (French: confit de canard) is a whole duck dish
+              prepared in France. All of the duck pieces are utilized to make
+              the supper in Gascony, according to the families who are carrying
+              on the duck confit heritage.
             </p>
           </div>
 
@@ -221,8 +243,12 @@
                 alt=""
               />
             </div>
-            <p class="text-center text-sm font-cormorant_garamond">
-              Soupe à l'oignon or French Onion Soup is
+            <p class="text-center text-sm font-cormorant_garamond w-72">
+              The tarte Tatin (French pronunciation: [tat tat]) is a pastry in
+              which the fruit (typically apples) is caramelized in butter and
+              sugar before the tart is baked, named after the Tatin sisters who
+              devised it and served it as their hotel's signature dish. It
+              started in France, but has now expanded to other countries.
             </p>
           </div>
           <div
@@ -235,8 +261,13 @@
                 alt=""
               />
             </div>
-            <p class="text-center text-sm font-cormorant_garamond">
-              Soupe à l'oignon or French Onion Soup is
+            <p class="text-center text-sm font-cormorant_garamond w-72">
+              Ratatouille is a stewed vegetable dish from the French Provençal
+              region of Nice, often known as ratatouille niçoise. Tomato,
+              garlic, onion, courgette (zucchini), aubergine (eggplant),
+              capsicum (bell pepper), and some combination of lush green herbs
+              native to the region are frequent ingredients in recipes and
+              cooking periods.
             </p>
           </div>
         </div>
