--- a/my-project/index.html
+++ b/my-project/index.html
@@ -23,17 +23,7 @@
     rel="stylesheet"
   />
   <nav
-    class="
-      fixed
-      bg-yellow-500
-      text-slate-900
-      font-hubballi
-      text-4xl
-      justify-around
-      flex
-      w-full
-      z-10
-    "
+    class="fixed bg-yellow-500 text-slate-900 font-hubballi text-4xl justify-around flex w-full z-10"
   >
     <a
       class="hover:text-blue-700 hover:scale-110 transition-all navigation-bar"
@@ -76,15 +66,7 @@
         "
       >
         <h1
-          class="
-            text-white text-center text-9xl
-            font-parisienne
-            hover:translate-y-20
-            hover:scale-110
-            transition-all
-            translate-y-20
-            header-title
-          "
+          class="text-white text-center text-9xl font-parisienne hover:translate-y-20 hover:scale-110 transition-all translate-y-20 header-title"
         >
           Welcome to France!
         </h1>
@@ -97,11 +79,13 @@
       <h2 class="font-parisienne text-center text-5xl">Regions</h2>
     </section>
     <span id="attractions"></span>
+
     <section class="section">
       <br />
       <br />
 
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
+      <div class="flex flex-wrap w-8/12">The Eiffel Tower</div>
     </section>
     <span id="foods"></span>
     <br /><br />
@@ -113,17 +97,7 @@
           class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-96"
         >
           <div
-            class="
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Soupe à l'oignon</h3>
             <div class="w-72">
@@ -140,18 +114,7 @@
             </p>
           </div>
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Coq Au Vin</h3>
             <div class="w-72">
@@ -170,18 +133,7 @@
           </div>
 
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Cassolet</h3>
             <div class="w-72">
@@ -206,19 +158,7 @@
           class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-124"
         >
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-              max-h-96
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96"
           >
             <h3 class="text-center">Bœuf bourguignon</h3>
             <div class="w-72">
@@ -238,18 +178,7 @@
           </div>
 
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Chocolate soufflé</h3>
             <div class="w-72">
@@ -268,18 +197,7 @@
             </p>
           </div>
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Flamiche</h3>
             <div class="w-72">
@@ -300,19 +218,7 @@
         </div>
         <div class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48">
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-              max-h-96
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96"
           >
             <h3 class="text-center">Confit De Canard</h3>
             <div class="w-72">
@@ -330,18 +236,7 @@
           </div>
 
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Tarte Tatin</h3>
             <div class="w-72">
@@ -359,18 +254,7 @@
             </p>
           </div>
           <div
-            class="
-              align-middle
-              bg-black
-              text-white
-              font-parisienne
-              text-3xl
-              border-8
-              rounded-md
-              border-yellow-500
-              duration-150
-              hover:translate-y-6 hover:translate-x-6
-            "
+            class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
           >
             <h3 class="text-center">Ratatouille</h3>
             <div class="w-72">
@@ -418,27 +302,11 @@
         <h4 class="font-parisienne text-4xl ml-6">1. Railroads</h4>
 
         <p
-          class="
-            font-cormorant_garamond
-            text-2xl
-            inline-block
-            align-top
-            text-center
-            translate-y-10
-          "
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10"
         >
           <img
             src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
-            class="
-              float-right
-              max-w-7xl max-h-52
-              mr-6
-              -translate-y-10
-              rounded-md
-              hover:scale-105
-              duration-500
-              transition-all
-            "
+            class="float-right max-w-7xl max-h-52 mr-6 -translate-y-10 rounded-md hover:scale-105 duration-500 transition-all"
           />
           Railroads in France have been used since 1827. They have been used for
           many various purposes, such as transporting goods, transporting
@@ -456,26 +324,11 @@
         <h4 class="font-parisienne text-4xl ml-6">2. Roads</h4>
         <br />
         <p
-          class="
-            font-cormorant_garamond
-            text-2xl
-            inline-block
-            text-center
-            translate-y-10
-          "
+          class="font-cormorant_garamond text-2xl inline-block text-center translate-y-10"
         >
           <img
             src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
-            class="
-              float-left
-              max-w-7xl max-h-52
-              ml-6
-              rounded-md
-              hover:scale-105
-              transition-all
-              duration-500
-              -translate-y-10
-            "
+            class="float-left max-w-7xl max-h-52 ml-6 rounded-md hover:scale-105 transition-all duration-500 -translate-y-10"
           />
           France is believed to be the most car-dependent country, with roads
           spanning all over the country. There are over ~950,000 km (590,000 mi)
@@ -494,28 +347,11 @@
         <h4 class="font-parisienne text-4xl ml-6">3. Waterways</h4>
         <br />
         <p
-          class="
-            font-cormorant_garamond
-            text-2xl
-            inline-block
-            align-top
-            text-center
-            translate-y-14
-            mr-6
-          "
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-14 mr-6"
         >
           <img
             src="https://www.cruisetradenews.com/resources/uploads/2019/06/croisi-europe-river-cruise.jpg"
-            class="
-              float-right
-              max-w-7xl max-h-52
-              -translate-y-20
-              rounded-md
-              hover:scale-105
-              transition-all
-              inline-block
-              duration-500
-            "
+            class="float-right max-w-7xl max-h-52 -translate-y-20 rounded-md hover:scale-105 transition-all inline-block duration-500"
           />
           The natural and man-made waterways of France are the largest in the
           entire continent of Europe. They expand through 8,500 kilometers
@@ -530,27 +366,11 @@
         <h4 class="font-parisienne text-4xl ml-6">4. Marine Transport</h4>
         <br />
         <p
-          class="
-            font-cormorant_garamond
-            text-2xl
-            inline-block
-            align-top
-            text-center
-            translate-y-10
-            ml-6
-          "
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6"
         >
           <img
             src="https://images.squarespace-cdn.com/content/v1/5cb9ccd20b77bd235df53651/1558598516643-1AI147QS4JA1QIQTGJQO/image-asset.jpeg?format=1500w"
-            class="
-              float-left
-              max-w-7xl max-h-52
-              -translate-y-10
-              rounded-md
-              hover:scale-105
-              transition-all
-              duration-500
-            "
+            class="float-left max-w-7xl max-h-52 -translate-y-10 rounded-md hover:scale-105 transition-all duration-500"
           />
           France has a large commercial marine, with 55 ships with a gross
           register tonnage of 1,000 tons or more. French companies also have a
@@ -569,28 +389,11 @@
       <div>
         <h4 class="font-parisienne text-4xl ml-6">5. Air Travel</h4>
         <p
-          class="
-            font-cormorant_garamond
-            text-2xl
-            inline-block
-            align-top
-            text-center
-            translate-y-10
-            ml-6
-          "
+          class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6"
         >
           <img
             src="https://cdn.travelpulse.com/images/99999999-9999-9999-9999-999999999999/b5770bfe-f750-e55f-4dc7-6310d5c0c5f7/630x355.jpg"
-            class="
-              float-right
-              max-w-7xl max-h-44
-              -translate-y-10
-              rounded-md
-              hover:scale-105
-              transition-all
-              duration-500
-              mr-6
-            "
+            class="float-right max-w-7xl max-h-44 -translate-y-10 rounded-md hover:scale-105 transition-all duration-500 mr-6"
           />
           Everyday, millions, if not billions, of people go to France by air and
           land in one of the 478 airports in the country. Many of these people
