--- a/my-project/index.html
+++ b/my-project/index.html
@@ -110,7 +110,15 @@
       <h2 class="font-parisienne text-center text-5xl">Foods</h2>
       <span id="foods">
         <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-96"
+          class="
+            flex flex-wrap
+            align-top
+            justify-around
+            w-2/7
+            h-96
+            mb-48
+            min-h-96
+          "
         >
           <div
             class="
@@ -203,7 +211,15 @@
         </div>
 
         <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-124"
+          class="
+            flex flex-wrap
+            align-top
+            justify-around
+            w-2/7
+            h-96
+            mb-48
+            min-h-124
+          "
         >
           <div
             class="
@@ -395,7 +411,15 @@
     <section class="section">
       <br />
       <br />
+
       <h2 class="font-parisienne text-center text-5xl">Hotels</h2>
+      <br />
+      <br />
+      <div class="">
+        <h3 class="font-parisienne text-center text-4xl">
+          Four Seasons Hotel George V, Paris
+        </h3>
+      </div>
     </section>
     <span id="transportation"></span>
     <br />
@@ -415,7 +439,7 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl ml-6">1. Railroads</h4>
+        <h4 class="font-parisienne text-4xl ml-6">Railroads</h4>
 
         <p
           class="
@@ -453,7 +477,7 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl ml-6">2. Roads</h4>
+        <h4 class="font-parisienne text-4xl ml-6">Roads</h4>
         <br />
         <p
           class="
@@ -491,7 +515,7 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl ml-6">3. Waterways</h4>
+        <h4 class="font-parisienne text-4xl ml-6">Waterways</h4>
         <br />
         <p
           class="
@@ -527,7 +551,7 @@
       </div>
 
       <div>
-        <h4 class="font-parisienne text-4xl ml-6">4. Marine Transport</h4>
+        <h4 class="font-parisienne text-4xl ml-6">Marine Transport</h4>
         <br />
         <p
           class="
@@ -567,7 +591,7 @@
       </div>
       <br />
       <div>
-        <h4 class="font-parisienne text-4xl ml-6">5. Air Travel</h4>
+        <h4 class="font-parisienne text-4xl ml-6">Air Travel</h4>
         <p
           class="
             font-cormorant_garamond
@@ -593,10 +617,12 @@
             "
           />
           Everyday, millions, if not billions, of people go to France by air and
-          land in one of the 478 airports in the country. Many of these people
-          are tourists, coming over to visit and experience the history and
-          culture of France. There are also around three heliports, mostly to
-          transport important items and people.
+          land in one of the 478 airports in the country. France has some of the
+          lively airports, with the Aéroport de Paris-Charles-de-Gaulle in
+          Roissy being the fifth busiest airport in the world. Many of these
+          people are tourists, coming over to visit and experience the history
+          and culture of France. There are also around three heliports, mostly
+          to transport important items and people.
         </p>
       </div>
     </section>
