--- a/my-project/index.html
+++ b/my-project/index.html
@@ -105,7 +105,14 @@
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
       <div class="flex flex-wrap w-10/12">
         <div
-          class="bg-slate-400 border-8 mx-64 border-neutral-900 rounded-xl text-center text-6xl"
+          class="
+            bg-slate-400
+            border-8
+            mx-64
+            border-neutral-900
+            rounded-xl
+            text-center text-6xl
+          "
         >
           <h3 class="font-parisienne">The Eiffel Tower</h3>
           <img
@@ -122,7 +129,15 @@
       <h2 class="font-parisienne text-center text-5xl">Foods</h2>
       <span id="foods">
         <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-96"
+          class="
+            flex flex-wrap
+            align-top
+            justify-around
+            w-2/7
+            h-96
+            mb-48
+            min-h-96
+          "
         >
           <div
             class="
@@ -215,7 +230,15 @@
         </div>
 
         <div
-          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-124"
+          class="
+            flex flex-wrap
+            align-top
+            justify-around
+            w-2/7
+            h-96
+            mb-48
+            min-h-124
+          "
         >
           <div
             class="
@@ -437,6 +460,7 @@
           <img
             src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
             class="
+              border-4 border-slate-900
               float-right
               max-w-7xl max-h-52
               mr-6
@@ -474,6 +498,7 @@
           <img
             src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
             class="
+              border-4 border-slate-900
               float-left
               max-w-7xl max-h-52
               ml-6
@@ -514,6 +539,7 @@
           <img
             src="https://www.cruisetradenews.com/resources/uploads/2019/06/croisi-europe-river-cruise.jpg"
             class="
+              border-4 border-slate-900
               float-right
               max-w-7xl max-h-52
               -translate-y-20
@@ -524,12 +550,12 @@
               duration-500
             "
           />
-          The natural and man-made waterways of France are the largest in the
-          entire continent of Europe. They expand through 8,500 kilometers
-          (5,300 miles) of France and are mostly managed by the French
-          navigation authority. Such examples would include the Loire, Seine and
-          Rhône. Tourists are able to cruise through many of them to enjoy the
-          nature and scenery.
+          The beautiful, natural, and man-made waterways of France are the
+          largest in the entire continent of Europe. They expand through 8,500
+          kilometers (5,300 miles) of France and are mostly managed by the
+          French navigation authority. Such examples would include the Loire,
+          Seine and Rhône. Tourists are able to cruise through many of them to
+          enjoy the nature and scenery.
         </p>
       </div>
 
@@ -551,6 +577,7 @@
             src="https://images.squarespace-cdn.com/content/v1/5cb9ccd20b77bd235df53651/1558598516643-1AI147QS4JA1QIQTGJQO/image-asset.jpeg?format=1500w"
             class="
               float-left
+              border-4 border-slate-900
               max-w-7xl max-h-52
               -translate-y-10
               rounded-md
@@ -589,6 +616,7 @@
           <img
             src="https://cdn.travelpulse.com/images/99999999-9999-9999-9999-999999999999/b5770bfe-f750-e55f-4dc7-6310d5c0c5f7/630x355.jpg"
             class="
+              border-4 border-slate-900
               float-right
               max-w-7xl max-h-44
               -translate-y-10
@@ -617,17 +645,26 @@
       <h2 class="font-parisienne text-center text-5xl">Hotels</h2>
       <br />
       <br />
-      <div class="border-8 border-black h-fit">
+      <div class="border-8 border-black bo">
         <h3 class="font-parisienne text-center text-4xl">
           Four Seasons Hotel George V, Paris
         </h3>
-        <p class="pt-10 translate-x-20 mx-20">
+        <p
+          class="
+            pt-10
+            translate-x-20
+            mx-20
+            font-cormorant_garamond
+            text-2xl
+            translate-y-10
+          "
+        >
           <img
             src="https://content.r9cdn.net/rimg/himg/d9/df/61/leonardo-1115200-PAR_1384_O-224835.jpg?crop=true&width=500&height=350"
-            class="float-left -translate-x-20"
+            class="float-left -translate-x-20 -translate-y-10"
           />
           The Four Seasons Hotel George V, Paris is a beautiful hotel with many
-          activities to do. With a
+          activities to do.
         </p>
       </div>
     </section>
