--- a/my-project/index.html
+++ b/my-project/index.html
@@ -87,14 +87,7 @@
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
       <div class="flex flex-wrap w-10/12">
         <div
-          class="
-            bg-slate-400
-            border-8
-            mx-64
-            border-neutral-900
-            rounded-xl
-            text-center text-6xl
-          "
+          class="bg-slate-400 border-8 mx-64 border-neutral-900 rounded-xl text-center text-6xl"
         >
           <h3 class="font-parisienne w-9/12">The Eiffel Tower</h3>
           <img
@@ -111,15 +104,7 @@
       <h2 class="font-parisienne text-center text-5xl">Foods</h2>
       <span id="foods">
         <div
-          class="
-            flex flex-wrap
-            align-top
-            justify-around
-            w-2/7
-            h-96
-            mb-48
-            min-h-96
-          "
+          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-96"
         >
           <div
             class="bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6"
@@ -180,15 +165,7 @@
         </div>
 
         <div
-          class="
-            flex flex-wrap
-            align-top
-            justify-around
-            w-2/7
-            h-96
-            mb-48
-            min-h-124
-          "
+          class="flex flex-wrap align-top justify-around w-2/7 h-96 mb-48 min-h-124"
         >
           <div
             class="align-middle bg-black text-white font-parisienne text-3xl border-8 rounded-md border-yellow-500 duration-150 hover:translate-y-6 hover:translate-x-6 max-h-96"
@@ -334,21 +311,7 @@
         >
           <img
             src="https://www.expatica.com/app/uploads/sites/5/2014/05/tram-orleans-france.jpg"
-<<<<<<< HEAD
-            class="float-right max-w-7xl max-h-52 mr-6 -translate-y-10 rounded-md hover:scale-105 duration-500 transition-all"
-=======
-            class="
-              border-4 border-slate-900
-              float-right
-              max-w-7xl max-h-52
-              mr-6
-              -translate-y-10
-              rounded-md
-              hover:scale-105
-              duration-500
-              transition-all
-            "
->>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281
+            class="border-4 border-slate-900 float-right max-w-7xl max-h-52 mr-6 -translate-y-10 rounded-md hover:scale-105 duration-500 transition-all"
           />
           Railroads in France have been used since 1827. They have been used for
           many various purposes, such as transporting goods, transporting
@@ -369,33 +332,22 @@
           class="font-cormorant_garamond text-2xl inline-block text-center translate-y-10"
         >
           <img
-            src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
-<<<<<<< HEAD
-            class="float-left max-w-7xl max-h-52 ml-6 rounded-md hover:scale-105 transition-all duration-500 -translate-y-10"
-=======
-            class="
-              border-4 border-slate-900
-              float-left
-              max-w-7xl max-h-52
-              ml-6
-              rounded-md
-              hover:scale-105
-              transition-all
-              duration-500
-              -translate-y-10
-            "
->>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281
-          />
-          France is believed to be the most car-dependent country, with roads
-          spanning all over the country. There are over ~950,000 km (590,000 mi)
-          of roads in France, which are used everyday by millions of people.
-          They go in many different vehicles, such as their own personal cars
-          and buses. There are also autoroutes, which some privately owned and
-          consists of a lot of road tolls, excluding areas near large cities and
-          in parts of the North. It has a network totalling 12,000 km (7,500 mi)
-          of motorways. France as well also is known to have the 8th largest
-          highway network, right behind the United States, China, Russia, Japan,
-          Canada, Spain and Germany.
+          src="https://media.worldnomads.com/Travel-Safety/france/francedriving-DanielCandal.jpg"
+          <<<<<<< HEAD class="float-left max-w-7xl max-h-52 ml-6 rounded-md
+          hover:scale-105 transition-all duration-500 -translate-y-10" =======
+          class=" border-4 border-slate-900 float-left max-w-7xl max-h-52 ml-6
+          rounded-md hover:scale-105 transition-all duration-500 -translate-y-10
+          " >>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281 /> France is
+          believed to be the most car-dependent country, with roads spanning all
+          over the country. There are over ~950,000 km (590,000 mi) of roads in
+          France, which are used everyday by millions of people. They go in many
+          different vehicles, such as their own personal cars and buses. There
+          are also autoroutes, which some privately owned and consists of a lot
+          of road tolls, excluding areas near large cities and in parts of the
+          North. It has a network totalling 12,000 km (7,500 mi) of motorways.
+          France as well also is known to have the 8th largest highway network,
+          right behind the United States, China, Russia, Japan, Canada, Spain
+          and Germany.
         </p>
       </div>
       <br />
@@ -406,29 +358,19 @@
           class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-14 mr-6"
         >
           <img
-            src="https://www.cruisetradenews.com/resources/uploads/2019/06/croisi-europe-river-cruise.jpg"
-<<<<<<< HEAD
-            class="float-right max-w-7xl max-h-52 -translate-y-20 rounded-md hover:scale-105 transition-all inline-block duration-500"
-=======
-            class="
-              border-4 border-slate-900
-              float-right
-              max-w-7xl max-h-52
-              -translate-y-20
-              rounded-md
-              hover:scale-105
-              transition-all
-              inline-block
-              duration-500
-            "
->>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281
-          />
-          The beautiful, natural, and man-made waterways of France are the
-          largest in the entire continent of Europe. They expand through 8,500
-          kilometers (5,300 miles) of France and are mostly managed by the
-          French navigation authority. Such examples would include the Loire,
-          Seine and Rhône. Tourists are able to cruise through many of them to
-          enjoy the nature and scenery.
+          src="https://www.cruisetradenews.com/resources/uploads/2019/06/croisi-europe-river-cruise.jpg"
+          <<<<<<< HEAD class="float-right max-w-7xl max-h-52 -translate-y-20
+          rounded-md hover:scale-105 transition-all inline-block duration-500"
+          ======= class=" border-4 border-slate-900 float-right max-w-7xl
+          max-h-52 -translate-y-20 rounded-md hover:scale-105 transition-all
+          inline-block duration-500 " >>>>>>>
+          08472b74832e230df58a46cac6ecbc974e61a281 /> The beautiful, natural,
+          and man-made waterways of France are the largest in the entire
+          continent of Europe. They expand through 8,500 kilometers (5,300
+          miles) of France and are mostly managed by the French navigation
+          authority. Such examples would include the Loire, Seine and Rhône.
+          Tourists are able to cruise through many of them to enjoy the nature
+          and scenery.
         </p>
       </div>
 
@@ -439,29 +381,19 @@
           class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6"
         >
           <img
-            src="https://images.squarespace-cdn.com/content/v1/5cb9ccd20b77bd235df53651/1558598516643-1AI147QS4JA1QIQTGJQO/image-asset.jpeg?format=1500w"
-<<<<<<< HEAD
-            class="float-left max-w-7xl max-h-52 -translate-y-10 rounded-md hover:scale-105 transition-all duration-500"
-=======
-            class="
-              float-left
-              border-4 border-slate-900
-              max-w-7xl max-h-52
-              -translate-y-10
-              rounded-md
-              hover:scale-105
-              transition-all
-              duration-500
-            "
->>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281
-          />
-          France has a large commercial marine, with 55 ships with a gross
-          register tonnage of 1,000 tons or more. French companies also have a
-          total of 1,400 ships, 700 which are registered with France. The 110
-          shipping firms employ 12,500 personel at sea and 15,500 on shore.
-          Every year, 305 million tonnes of goods and 15 million passengers are
-          shipped to sea to a destination somewhere in the world. France also
-          boasts a large number of seaports, which include: Bayonne, Bordeaux,
+          src="https://images.squarespace-cdn.com/content/v1/5cb9ccd20b77bd235df53651/1558598516643-1AI147QS4JA1QIQTGJQO/image-asset.jpeg?format=1500w"
+          <<<<<<< HEAD class="float-left max-w-7xl max-h-52 -translate-y-10
+          rounded-md hover:scale-105 transition-all duration-500" =======
+          class=" float-left border-4 border-slate-900 max-w-7xl max-h-52
+          -translate-y-10 rounded-md hover:scale-105 transition-all duration-500
+          " >>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281 /> France has a
+          large commercial marine, with 55 ships with a gross register tonnage
+          of 1,000 tons or more. French companies also have a total of 1,400
+          ships, 700 which are registered with France. The 110 shipping firms
+          employ 12,500 personel at sea and 15,500 on shore. Every year, 305
+          million tonnes of goods and 15 million passengers are shipped to sea
+          to a destination somewhere in the world. France also boasts a large
+          number of seaports, which include: Bayonne, Bordeaux,
           Boulogne-sur-Mer, Brest, Calais, Cherbourg-Octeville, Dunkerque,
           Fos-sur-Mer, La Pallice, Le Havre, Lorient, Marseille, Nantes, Nice,
           Paris, Port-la-Nouvelle, Port-Vendres, Roscoff, Rouen, Saint-Nazaire,
@@ -475,30 +407,19 @@
           class="font-cormorant_garamond text-2xl inline-block align-top text-center translate-y-10 ml-6"
         >
           <img
-            src="https://cdn.travelpulse.com/images/99999999-9999-9999-9999-999999999999/b5770bfe-f750-e55f-4dc7-6310d5c0c5f7/630x355.jpg"
-<<<<<<< HEAD
-            class="float-right max-w-7xl max-h-44 -translate-y-10 rounded-md hover:scale-105 transition-all duration-500 mr-6"
-=======
-            class="
-              border-4 border-slate-900
-              float-right
-              max-w-7xl max-h-44
-              -translate-y-10
-              rounded-md
-              hover:scale-105
-              transition-all
-              duration-500
-              mr-6
-            "
->>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281
-          />
-          Everyday, millions, if not billions, of people go to France by air and
-          land in one of the 478 airports in the country. France has some of the
-          lively airports, with the Aéroport de Paris-Charles-de-Gaulle in
-          Roissy being the fifth busiest airport in the world. Many of these
-          people are tourists, coming over to visit and experience the history
-          and culture of France. There are also around three heliports, mostly
-          to transport important items and people.
+          src="https://cdn.travelpulse.com/images/99999999-9999-9999-9999-999999999999/b5770bfe-f750-e55f-4dc7-6310d5c0c5f7/630x355.jpg"
+          <<<<<<< HEAD class="float-right max-w-7xl max-h-44 -translate-y-10
+          rounded-md hover:scale-105 transition-all duration-500 mr-6" =======
+          class=" border-4 border-slate-900 float-right max-w-7xl max-h-44
+          -translate-y-10 rounded-md hover:scale-105 transition-all duration-500
+          mr-6 " >>>>>>> 08472b74832e230df58a46cac6ecbc974e61a281 /> Everyday,
+          millions, if not billions, of people go to France by air and land in
+          one of the 478 airports in the country. France has some of the lively
+          airports, with the Aéroport de Paris-Charles-de-Gaulle in Roissy being
+          the fifth busiest airport in the world. Many of these people are
+          tourists, coming over to visit and experience the history and culture
+          of France. There are also around three heliports, mostly to transport
+          important items and people.
         </p>
       </div>
     </section>
@@ -515,14 +436,7 @@
           Four Seasons Hotel George V, Paris
         </h3>
         <p
-          class="
-            pt-10
-            translate-x-20
-            mx-20
-            font-cormorant_garamond
-            text-2xl
-            translate-y-10
-          "
+          class="pt-10 translate-x-20 mx-20 font-cormorant_garamond text-2xl translate-y-10"
         >
           <img
             src="https://content.r9cdn.net/rimg/himg/d9/df/61/leonardo-1115200-PAR_1384_O-224835.jpg?crop=true&width=500&height=350"
