--- a/my-project/index.html
+++ b/my-project/index.html
@@ -86,11 +86,9 @@
       <br />
 
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
-      <div
-        class="flex flex-wrap w-10/12 hover:translate-x-4 hover:translate-y-4 duration-100"
-      >
+      <div class="flex flex-wrap w-9/12">
         <div
-          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl"
+          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100"
         >
           <h3
             class="text-white mx-auto font-parisienne w-9/12 text-center mb-1 z-10"
@@ -126,12 +124,9 @@
             meters.
           </p>
         </div>
-      </div>
-      <div
-        class="flex flex-wrap w-10/12 hover:translate-x-4 hover:translate-y-4 duration-100 m"
-      >
+
         <div
-          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl"
+          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100"
         >
           <h3
             class="text-white mx-auto font-parisienne w-9/12 text-center mb-1 z-10"
@@ -472,7 +467,7 @@
             src="https://cdn.travelpulse.com/images/99999999-9999-9999-9999-999999999999/b5770bfe-f750-e55f-4dc7-6310d5c0c5f7/630x355.jpg"
             class="border-4 border-slate-900 float-right max-w-7xl max-h-44 -translate-y-10 rounded-md hover:scale-105 transition-all duration-500 mr-6"
           />
-          Everyday, millions, if not billions, of people go to France by air and
+          Everyday, hundreds of thousounds, of people go to France by air and
           land in one of the 478 airports in the country. France has some of the
           lively airports, with the Aéroport de Paris-Charles-de-Gaulle in
           Roissy being the fifth busiest airport in the world. Many of these
@@ -561,17 +556,7 @@
             class="w-full align-middle"
           />
           <div
-            class="
-              text-xl
-              pt-2
-              pb-2
-              pl-3
-              pr-3
-              absolute
-              bottom-2
-              w-full
-              text-center text-black
-            "
+            class="text-xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 w-full text-center text-black"
           >
             Four Seasons Hotel George V, Paris
           </div>
@@ -583,17 +568,7 @@
             class="w-full align-middle"
           />
           <div
-            class="
-              text-xl
-              pt-2
-              pb-2
-              pl-3
-              pr-3
-              absolute
-              bottom-2
-              w-full
-              text-center
-            "
+            class="text-xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 w-full text-center"
           >
             Waldorf Astoria Versailles - Trianon Palace
           </div>
@@ -605,17 +580,7 @@
             class="w-full align-middle"
           />
           <div
-            class="
-              text-xl
-              pt-2
-              pb-2
-              pl-3
-              pr-3
-              absolute
-              bottom-2
-              w-full
-              text-center text-white
-            "
+            class="text-xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 w-full text-center text-white"
           >
             Shangri-La Paris
           </div>
@@ -626,17 +591,7 @@
             class="w-full align-middle"
           />
           <div
-            class="
-              text-xl
-              pt-2
-              pb-2
-              pl-3
-              pr-3
-              absolute
-              bottom-2
-              w-full
-              text-center text-white
-            "
+            class="text-xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 w-full text-center text-white"
           >
             Hotel Eiffel Blomet
           </div>
@@ -647,17 +602,7 @@
             class="w-full align-middle"
           />
           <div
-            class="
-              text-xl
-              pt-2
-              pb-2
-              pl-3
-              pr-3
-              absolute
-              bottom-2
-              w-full
-              text-center text-white
-            "
+            class="text-xl pt-2 pb-2 pl-3 pr-3 absolute bottom-2 w-full text-center text-white"
           >
             Hôtel Martinez - In the Unbound Collection by Hyatt
           </div>
@@ -670,85 +615,27 @@
 
       <div class="text-center">
         <span
-          class="
-            bg-gray-400
-            hover:bg-gray-600
-            cursor-pointer
-            h-4
-            w-4
-            inline-block
-            mr-1
-            ml-1
-            active:bg-gray-600
-            rounded-full
-            dot
-          "
+          class="bg-gray-400 hover:bg-gray-600 cursor-pointer h-4 w-4 inline-block mr-1 ml-1 active:bg-gray-600 rounded-full dot"
           style="transition: background-color 0.6s ease"
           onclick="currentSlide(1)"
         ></span>
         <span
-          class="
-            bg-gray-400
-            hover:bg-gray-600
-            cursor-pointer
-            h-4
-            w-4
-            inline-block
-            mr-1
-            ml-1
-            active:bg-gray-600
-            rounded-full
-            dot
-          "
+          class="bg-gray-400 hover:bg-gray-600 cursor-pointer h-4 w-4 inline-block mr-1 ml-1 active:bg-gray-600 rounded-full dot"
           style="transition: background-color 0.6s ease"
           onclick="currentSlide(2)"
         ></span>
         <span
-          class="
-            bg-gray-400
-            hover:bg-gray-600
-            cursor-pointer
-            h-4
-            w-4
-            inline-block
-            mr-1
-            ml-1
-            active:bg-gray-600
-            rounded-full
-            dot
-          "
+          class="bg-gray-400 hover:bg-gray-600 cursor-pointer h-4 w-4 inline-block mr-1 ml-1 active:bg-gray-600 rounded-full dot"
           style="transition: background-color 0.6s ease"
           onclick="currentSlide(3)"
         ></span>
         <span
-          class="
-            bg-gray-400
-            hover:bg-gray-600
-            cursor-pointer
-            h-4
-            w-4
-            inline-block
-            mr-1
-            ml-1
-            rounded-full
-            dot
-          "
+          class="bg-gray-400 hover:bg-gray-600 cursor-pointer h-4 w-4 inline-block mr-1 ml-1 rounded-full dot"
           style="transition: background-color 0.6s ease"
           onclick="currentSlide(4)"
         ></span>
         <span
-          class="
-            bg-gray-400
-            hover:bg-gray-600
-            cursor-pointer
-            h-4
-            w-4
-            inline-block
-            mr-1
-            ml-1
-            rounded-full
-            dot
-          "
+          class="bg-gray-400 hover:bg-gray-600 cursor-pointer h-4 w-4 inline-block mr-1 ml-1 rounded-full dot"
           style="transition: background-color 0.6s ease"
           onclick="currentSlide(5)"
         ></span>
