--- a/my-project/index.html
+++ b/my-project/index.html
@@ -7,7 +7,6 @@
   </head>
   <title class="text-white">France</title>
   <script type="module" src="./js/main.js"></script>
-  <script type="module" src="./index.css"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Flip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
@@ -743,7 +742,10 @@
         </p>
       </div>
     </section>
+    <script></script>
     <span id="hotels"></span>
+
+    <script type="module" src="./js/hotels.js"></script>
     <section class="section">
       <br />
       <br />
@@ -1015,7 +1017,6 @@
           onclick="currentSlide(5)"
         ></span>
       </div>
-
       <script>
         var slideIndex = 1;
         showSlides(slideIndex);
