--- a/my-project/index.html
+++ b/my-project/index.html
@@ -85,9 +85,12 @@
       <br />
 
       <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
-      <div class="flex flex-wrap w-9/12">
+      <div
+        class="grid grid-flow-col grid-cols-5 grid-rows-[700px_minmax(900px,_1fr)_100px]"
+      >
+        ">
         <div
-          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100"
+          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100 col-start-1 col-span-4 row-span-1"
         >
           <h3
             class="text-white mx-auto font-parisienne w-9/12 text-center mb-1 z-10"
@@ -124,7 +127,7 @@
           </p>
         </div>
         <div
-          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100"
+          class="bg-black border-8 mx-48 border-yellow-500 rounded-xl text-6xl hover:translate-x-4 hover:translate-y-4 duration-100 col-start-2 col-span-5 row-span-1"
         >
           <h3
             class="text-white mx-auto font-parisienne w-9/12 text-center mb-1 z-10"
@@ -133,7 +136,7 @@
           </h3>
           <img
             class="pl-20 pr-20 pb-5 rounded-xl"
-            src="https://media.cntraveler.com/photos/57d961ce3e6b32bf25f5ad0f/16:9/w_2560,c_limit/most-beautiful-paris-louvre-GettyImages-536267205.jpg"
+            src="https://www.sortiraparis.com/images/80/66131/350528-le-musee-du-louvre-coeur-artistique-et-touristique-de-la-capitale.jpg"
             alt=""
           />
           <p
