--- a/my-project/index.html
+++ b/my-project/index.html
@@ -83,7 +83,7 @@
             hover:scale-110
             transition-all
             translate-y-20
-            header-title
+            header-title header
           "
         >
           Welcome to France!
@@ -94,7 +94,7 @@
     <section id="section">
       <br />
       <br />
-      <h2 class="font-parisienne text-center text-5xl">Regions</h2>
+      <h2 class="font-parisienne text-center text-5xl header">Regions</h2>
     </section>
     <span id="attractions"></span>
 
@@ -102,7 +102,7 @@
       <br />
       <br />
 
-      <h2 class="font-parisienne text-center text-5xl">Attractions</h2>
+      <h2 class="font-parisienne text-center text-5xl header">Attractions</h2>
       <div class="flex flex-wrap w-9/12">
         <div
           class="
@@ -232,7 +232,7 @@
     <br /><br />
 
     <section>
-      <h2 class="font-parisienne text-center text-5xl">Foods</h2>
+      <h2 class="font-parisienne text-center text-5xl header">Foods</h2>
       <span id="foods">
         <div
           class="
@@ -537,7 +537,9 @@
     <br />
     <br />
     <section class="section">
-      <h2 class="font-parisienne text-center text-5xl">Transportation</h2>
+      <h2 class="font-parisienne text-center text-5xl header">
+        Transportation
+      </h2>
       <div>
         <br />
         <p class="text-center font-cormorant_garamond text-2xl">
@@ -750,7 +752,7 @@
     <section class="section">
       <br />
       <br />
-      <h2 class="font-parisienne text-5xl text-center">Hotels</h2>
+      <h2 class="font-parisienne text-5xl text-center header">Hotels</h2>
       <style>
         .active {
           background-color: #717171;
