--- a/my-project/index.html
+++ b/my-project/index.html
@@ -108,7 +108,7 @@
       <div
         class="bg-no-repeat bg-cover h-screen -z-10"
         style="
-          background-image: url(i.ytimg.com/vi/BZLZyX3JdEM/maxresdefault.jpg); ;
+          background-image: url(https://i.ytimg.com/vi/BZLZyX3JdEM/maxresdefault.jpg);
         "
       >
         <h1
