--- a/my-project/index.html
+++ b/my-project/index.html
@@ -77,6 +77,9 @@
       <br class="select-none" />
       <br class="select-none" />
       <h2 class="font-parisienne text-center text-5xl header">Regions</h2>
+      <img
+        src="https://media.discordapp.net/attachments/888538228100038706/960315382399397948/unknown.png"
+      />
     </section>
     <span id="attractions"></span>
 
