--- a/my-project/index.html
+++ b/my-project/index.html
@@ -157,25 +157,24 @@
           <p
             class="text-white font-cormorant_garamond text-sm pl-10 pr-10 text-center"
           >
-            It was built from 1887 to 1889 as the centerpiece of the 1889
-            World's Fair and was initially condemned for its design by some of
-            France's top artists and philosophers, but it has since become a
-            global cultural icon of France and one of the most recognizable
-            structures in the world. The Eiffel Tower is the most visited
-            paid-entry monument in the world, with 6.91 million visitors in
-            2015. In 1964, the Tower was designated as a historic monument, and
-            in 1991, it was included as part of the UNESCO World Heritage Site
-            "Paris, Banks of the Seins." The tower is 330 meters (1,083 feet)
-            tall, about the same as an 81-story building, and it is the tallest
-            structure in the world The tower is 330 meters (1,083 feet) tall,
-            about the same as an 81-story skyscraper, and it is Paris' highest
-            structure. It has a square foundation that measures 125 meters (410
-            feet) on each side. The Eiffel Tower eclipsed the Washington
-            Monument during construction to become the world's highest man-made
-            structure, a title it held for 41 years until the Chrysler Building
-            in New York City was completed in 1930. It was the first structure
-            in the world to reach heights of more than 200 meters and 300
-            meters.
+            The Louvre, often known as the Louvre Museum, is a historic monument
+            in Paris, France, and the world's most visited museum. It houses
+            some of the world's most famous works of art, like as the Mona Lisa
+            and the Venus de Milo. It is located on the Right Bank of the Seine
+            in the city's 1st arrondissement and is a civic landmark (district
+            or ward). Approximately 38,000 pieces from prehistory to the
+            twenty-first century are on display at any given moment, covering an
+            area of 72,735 square meters (782,910 square feet).The museum is
+            housed in the Louvre Palace, which was erected by Philip II in the
+            late 12th and early 13th centuries. In the museum's basement,
+            remnants of the medieval Louvre fortress can be seen. The stronghold
+            soon lost its defensive function as a result of urban expansion, and
+            Francis I converted it into the French Kings' royal home in 1546.
+            [6] The current Louvre Palace was built after the structure was
+            enlarged several times. Louis XIV chose the Palace of Versailles for
+            his household in 1682, leaving the Louvre primarily as a display
+            space for the royal collection, which included ancient Greek and
+            Roman sculpture from 1692.
           </p>
         </div>
       </div>
@@ -234,7 +233,7 @@
             Cité de Carcassonne
           </h3>
           <a
-            href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.chateauversailles.fr%2F&psig=AOvVaw3f5tGlCXSsR3jscXdcJj9H&ust=1648834542304000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCKjwrPTy8PYCFQAAAAAdAAAAABAK"
+            href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tourism-carcassonne.co.uk%2Fdiscover%2Fthe-medieval-city&psig=AOvVaw2AL8tgcoMXbqFEZxJ3OS2m&ust=1649179851093000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCMje74j3-vYCFQAAAAAdAAAAABAD"
             target="_blank"
             rel="noopener noreferrer"
           >
