--- a/my-project/index.html
+++ b/my-project/index.html
@@ -129,7 +129,7 @@
       <br class="select-none" />
       <h2 class="font-parisienne text-center text-5xl header">Regions</h2>
       <img
-      class="map"
+        class="map"
         src="https://media.discordapp.net/attachments/888538228100038706/960315382399397948/unknown.png"
       />
     </section>
@@ -1308,7 +1308,7 @@
     <br class="select-none" />
     <footer class="bg-yellow-500">
       <p>By: Gregory Fava & Marcus Yuen</p>
-      <div class="bg-no-repeat bg-center footer"></div>
+      <div class="bg-no-repeat bg-center select-none footerimage"></div>
     </footer>
   </body>
 </html>
